--- a/SeniorDesign/SeniorDesign/app/src/main/res/values/strings.xml
+++ b/SeniorDesign/SeniorDesign/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Data Reciever</string>
+    <string name="app_name">Data Receiver</string>
     <string name="action_settings">Settings</string>
-    <string name="data_clear">Clear Data</string>
-    <string name="data_display">Display Data</string>
+    <string name="data_clear">Clear</string>
+    <string name="data_display">Display</string>
 </resources>
